Fixed issue with my ViewController class being set wrong

--- a/ConversionApp/Base.lproj/Main.storyboard
+++ b/ConversionApp/Base.lproj/Main.storyboard
@@ -11,8 +11,8 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ConversionApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="DecimalMinusTextField" customModule="ConversionApp" customModuleProvider="target">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="ConversionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -105,7 +105,7 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="kIt-te-g03"/>
                     </view>
                     <navigationItem key="navigationItem" id="IvD-D9-8xJ"/>
                     <connections>
@@ -161,7 +161,7 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="7Gm-HY-EnT"/>
+                        <viewLayoutGuide key="safeArea" id="6NV-c9-b0x"/>
                     </view>
                     <toolbarItems>
                         <barButtonItem title="Save" id="zcd-Bs-E19"/>
@@ -188,7 +188,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oUc-BY-4nJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Xs4-g1-hqu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1979.7101449275365" y="48.883928571428569"/>
+            <point key="canvasLocation" x="1980" y="42"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FUZ-5b-hkX">
